# MusiSort

./: README.md  pyproject.toml  setup.py
.github/workflows/: spelling_action.yml
config/: .spellcheck.yml
musisort/: analysis_manager.py  classification_manager.py  command_manager.py  debug_manager.py  file_manager.py
musisort.egg-info/: PKG-INFO  SOURCES.txt
musisort/analysis_methods/: bounds.py  fourdim.py  mel.py  pitch.py
src/: data_tools.py  data_tools2.py  data_tools3.py  file_functions.py  main.py  music_analysis.py  music_tools.py  nonsense.txt  read_tests.py  var_data.py
src/audio_data/compressed_peaks/: Thelema-wav.npy
tests/: test_music_sort.py
