[tool.poetry]
name = "music-sort"
version = "0.1.0"
description = ""
authors = ["gvanzin-allegheny <vanzing@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.3"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
